Aggiunto il componente `Win`

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Perfect Democracy</title>
     <script src="./index.tsx" type="module"></script>
+    <style>
+      :root {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color-scheme: dark light;
+      }
+    </style>
   </head>
   <body></body>
 </html>
