--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Perfect Democracy</title>
+    <link rel="icon" href="./icon.svg" />
     <script src="./index.tsx" type="module"></script>
     <style>
       :root {
